--- a/Style/Layout/_global.scss
+++ b/Style/Layout/_global.scss
@@ -1,481 +1,105 @@
-/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
-for details on configuring this project to bundle and minify static web assets. */
-
-/*taget fra site*/
-
-html {
-    position: relative;
-    min-height: 100%;
-    font-size: 14px;
-  }
-
-
-
-
-a.navbar-brand {
-    white-space: normal;
-    text-align: center;
-    word-break: break-all;
-  }
-  
-  /* Provide sufficient contrast against white background */
-  a {
-    color: #0366d6;
-  }
-  
-  .btn-primary {
-    color: #fff;
-    background-color: #1b6ec2;
-    border-color: #1861ac;
-  }
-  
-  .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-    color: #fff;
-    background-color: #1b6ec2;
-    border-color: #1861ac;
-  }
-  
-  /* Sticky footer styles
-  -------------------------------------------------- */
-  
-  @media (min-width: 768px) {
-    html {
-      font-size: 16px;
-    }
-  }
-  
-  .border-top {
-    border-top: 1px solid #e5e5e5;
-  }
-  .border-bottom {
-    border-bottom: 1px solid #e5e5e5;
-  }
-  
-  .box-shadow {
-    box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
-  }
-  
-  button.accept-policy {
-    font-size: 1rem;
-    line-height: inherit;
-  }
-  
-  /* Sticky footer styles
-  -------------------------------------------------- */
- 
-  
-
-  .footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    white-space: nowrap;
-    line-height: 60px; /* Vertically center the text there */
-  }
-  
-
-  
-
-
-
-  
-
-.rowdetail {
-    display: none;
-    background-color: #A7D8C0;
-    border-color: white;
-}
-
-.rowdetail tr {
-    border-bottom: 1px solid white;
-}
-
-.table-container {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    width: 100%;
-    padding: 2.5%;
-}
-
-table {
-    border-collapse: collapse;
-    width: 100%;
-}
-
-tr {
-    border-bottom: 1px solid #808080;
-}
-
-th {
-    text-align: center;
-}
-
-td {
-    text-align: center;
-}
-
-.more-info {
-    padding: 10px 10px;
-}
-
-
-
-
-.rotate {
-    -moz-transition: all 0.01s linear;
-    -webkit-transition: all 0.01s linear;
-    transition: all 0.01s linear;
-}
-
-.rotate.down {
-    -moz-transform: rotate(180deg);
-    -webkit-transform: rotate(180deg);
-    transform: rotate(180deg);
-}
-
-.fa-sort-down {
-    padding: 10px 10px;
-    font-size: 18px;
-    text-align: center;
-    justify-self: center;
-}
-
-
-.thead-green {
-    background-color: #00904A;
-    color: white;
-}
-
-.button-green-container {
-    display: inline-grid;
-    align-items: center;
-    justify-items: center;
-}
-
-.button-green {
-    border: none;
-    border-radius: 5px;
-    padding: 3px 2px;
-    font-size: 12px;
-    color: white;
-    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-    background-color: #00904A;
-    width: 90%;
-    margin: 10px;
-    cursor: pointer;
-}
-
-.button-green:hover {
-    opacity: 0.7;
-}
-
-.filter:hover .dropdown-content {
-    display: block;
-}
-
-.dropdown-content a:hover {
-    background-color: #ddd;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-
-
-
-/*fra Master*/
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700');
+@import url('//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css');
 body {
-    margin-top: 50px;
-    background-color: #fff;
-    font-family: Arial, sans-serif;
-    font-size: 14px;
-    letter-spacing: 0.01em;
-    color: #39464e;
-  }
+  color: #5D5F63;
+  background: #293949;
+  font-family: 'Open Sans',sans-serif;
+  padding: 0;
+  margin: 0;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+}
+.sidebar-toggle {
+  margin-left: -240px;
+}
+.sidebar {
+    
+    
+    
+        .logo{
+            width: 80%;
+            margin: 20px;
+           
+            
+        }
+    
+  width: 240px;
+  height: 100%;
+  background: white;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  position: absolute;
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
+  -ms-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
+  z-index: 100;
   
-  .navbar-default {
-    background-color: #FFF;
-    margin-left: 200px;
-  }
-  
-  /*main side bar*/
-  .msb {
-    width: 200px;
-    background-color: #F5F7F9;
-    position: fixed;
-    left: 0;
-    top: 0;
-    right: auto;
-    min-height: 100%;
-    overflow-y: auto;
-    white-space: nowrap;
-    height: 100%;
-    z-index: 1;
-    border-right: 1px solid #ddd;
-    .navbar {
-      border: none;
-      margin-left: 0;
-      background-color: inherit;
+  #leftside-navigation {
+    ul, ul ul {
+      margin: -2px 0 0;
+      padding: 0;
+      
     }
-    .navbar-header {
-      width: 100%;
-      border-bottom: 1px solid #e7e7e7;
-      margin-bottom: 20px;
-      background: #fff;
-    }
-    .navbar-nav {
-      .panel {
-        border: 0 none;
-        box-shadow: none;
-        margin: 0;
-        background: inherit;
-      }
+    ul {
       li {
-        display: block;
-        width: 100%;
+        list-style-type: none;
+        border-bottom: 1px solid rgba(255,255,255,.05);
+        &.active {
+          & > a {
+            color: #1abc9c;
+          }
+          ul {
+            display: block;
+          }
+        }
         a {
-          padding: 15px;
-          color: #5f5f5f;
-          .glyphicon, .fa {
-            margin-right: 8px;
+          color: #000000;
+          text-decoration: none;
+          display: block;
+          padding: 18px 0 18px 25px;
+          font-size: 12px;
+          outline: 0;
+          -webkit-transition: all 200ms ease-in;
+          -moz-transition: all 200ms ease-in;
+          -o-transition: all 200ms ease-in;
+          -ms-transition: all 200ms ease-in;
+          transition: all 200ms ease-in;
+          &:hover {
+            color: #1abc9c;
+            
+          }
+          span {
+            display: inline-block;
+          }
+          i {
+            width: 20px;
+            .fa-angle-left, .fa-angle-right {
+              padding-top: 3px;
+            }
           }
         }
       }
     }
-    .nb {
-      padding-top: 5px;
-      padding-left: 10px;
-      margin-bottom: 30px;
-      overflow: hidden;
+    ul ul {
+      display: none;
       
-    }
-  }
-  ul.nv,
-  ul.ns {
-    position: relative;
-    padding: 0;
-    list-style: none;  
-  }
-  .nv {  
-    li {
-      display: block;
-      position: relative;
-      
-      &::before {
-        clear: both;
-        content: "";      
-        display: table;
-      }
-      a {
-        color: #444;
-        padding: 10px 25px;
-        display: block;
-        vertical-align: middle;
-        
-        .ic {
-          font-size: 16px;
-          margin-right: 5px;
-          font-weight: 300;
-          display: inline-block;
-        }
-      }
-    }
-    /*ns: nav-sub*/
-    .ns {
       li {
-        a {
-          padding: 10px 50px;
-        }
-      }
-      
-    }
-    
-  }
-  
-  
-  /*main content wrapper*/
-  .mcw {
-    margin-left: 200px;
-    position: relative;
-    min-height: 100%;
-    
-    /*content view*/
-    .cv {
-    }
-  }
-  
-  
-  /*globals*/
-  a,
-  a:focus,
-  a:hover {
-   text-decoration: none;
-  }
-  
-  .inbox {
-    .container-fluid {
-      padding-left: 0;
-      padding-right: 0;
-    }
-    
-    ul, li {
-      margin: 0;
-      padding: 0;
-    }
-    ul {    
-      li {
-        list-style: none;
-        a {
-          display: block;
-          padding: 10px 20px;
-        }
-      }
-    }
-  }
-  .msb, .mnb {
-      -moz-animation: slidein 300ms forwards;
-      -o-animation: slidein 300ms forwards;
-      -webkit-animation: slidein 300ms forwards;
-      animation: slidein 300ms forwards;
-      -webkit-transform-style: preserve-3d;
-      transform-style: preserve-3d;  
-  }
-  .mcw {
-      -moz-animation: bodyslidein 300ms forwards;
-      -o-animation: bodyslidein 300ms forwards;
-      -webkit-animation: bodyslidein 300ms forwards;
-      animation: bodyslidein 300ms forwards;
-      -webkit-transform-style: preserve-3d;
-      transform-style: preserve-3d;  
-  }
-  body.msb-x {
-  
-    .mcw, .mnb {
-      margin-left: 0;
-  -moz-animation: bodyslideout 300ms forwards;
-      -o-animation: bodyslideout 300ms forwards;
-      -webkit-animation: bodyslideout 300ms forwards;
-      animation: bodyslideout 300ms forwards;
-      -webkit-transform-style: preserve-3d;
-      transform-style: preserve-3d;
-    }
-    .msb {
-      -moz-animation: slideout 300ms forwards;
-      -o-animation: slideout 300ms forwards;
-      -webkit-animation: slideout 300ms forwards;
-      animation: slideout 300ms forwards;
-      -webkit-transform-style: preserve-3d;
-      transform-style: preserve-3d;
-    }
-  }
-  
-    /* Slide in animation */
-    @-moz-keyframes slidein {
-      0% {
-        left: -200px;
-      }
-      100% {
-        left: 0;
-      }
-    }
-    @-webkit-keyframes slidein {
-      0% {
-        left: -200px;
-      }
-      100% {
-        left: 0;
-      }
-    }
-    @keyframes slidein {
-      0% {
-        left: -200px;
-      }
-      100% {
-        left: 0;
-      }
-    }
-    @-moz-keyframes slideout {
-      0% {
-        left: 0;
-      }
-      100% {
-        left: -200px;
-      }
-    }
-    @-webkit-keyframes slideout {
-      0% {
-        left: 0;
-      }
-      100% {
-        left: -200px;
-      }
-    }
-    @keyframes slideout {
-      0% {
-        left: 0;
-      }
-      100% {
-        left: -200px;
-      }
-    }
-  
-    @-moz-keyframes bodyslidein {
-      0% {
-        left: 0;
-      }
-      100% {
-        margin-left: 200px;
-      }
-    }
-    @-webkit-keyframes bodyslidein {
-      0% {
-        left: 0;
-      }
-      100% {
-        left:0
-      }
-    }
-    @keyframes bodyslidein {
-      0% {
+        background: #23313f;
+        margin-bottom: 0;
         margin-left: 0;
-      }
-      100% {
-        margin-left: 200px;
-      }
-    }
-    @-moz-keyframes bodyslideout {
-      0% {
-        margin-left: 200px;
-      }
-      100% {
         margin-right: 0;
+        border-bottom: none;
+        a {
+          font-size: 12px;
+          padding-top: 13px;
+          padding-bottom: 13px;
+          color: #aeb2b7;
+         
+        }
       }
     }
-    @-webkit-keyframes bodyslideout {
-      0% {
-        margin-left: 200px;
-      }
-      100% {
-        margin-left: 0;
-      }
-    }
-    @keyframes bodyslideout {
-      0% {
-        margin-left: 200px;
-      }
-      100% {
-        margin-left: 0;
-      }
-    }
+  }
+}
+
+
