nav, user, fixer toggler
sat navigation på alle sider
indsat bruger i header
togglerkrig

--- a/Style/Layout/_global.scss
+++ b/Style/Layout/_global.scss
@@ -1,20 +1,17 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700');
-@import url('//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css');
-body {
-  color: #5D5F63;
-  background: #293949;
-  font-family: 'Open Sans',sans-serif;
-  padding: 0;
-  margin: 0;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-}
+
+
+
+
+
+
+
+/*sidenav*/
 .sidebar-toggle {
   margin-left: -240px;
+  
 }
 .sidebar {
-    
-    
+    margin-top: -90px;
     
         .logo{
             width: 80%;
@@ -22,6 +19,18 @@ body {
            
             
         }
+
+        .sidebar, .closebtn {
+            position: absolute;
+            top: 0;
+            right: 25px;
+            font-size: 36px;
+            margin-left: 50px;
+            text-decoration: none;
+            color: black;
+          }
+
+         
     
   width: 240px;
   height: 100%;
@@ -103,3 +112,53 @@ body {
 }
 
 
+
+
+
+    @media screen and (max-height: 450px) {
+        .sidebar {padding-top: 15px;}
+        .sidebar a {font-size: 18px;}
+      }
+
+/*sidenav end*/
+
+
+/*header*/
+
+header{
+    background-color: #1abc9c;
+    display: flex;
+    .openbtn {
+        font-size: 20px;
+        cursor: pointer;
+        padding: 10px 15px;
+        border: none;
+        background-color: #1abc9c;
+        &:hover {
+            background-color: #1abc9c;
+          }
+      
+      }
+      li{
+          list-style-type: none;
+          margin-top: 30px;
+          width: 100%;
+          text-align: end;
+
+          a{
+            text-decoration: none;
+            color: white;
+            margin-right: 50px;
+        }
+        .fa-user{
+            color: white;
+            padding-right: 10px;
+        }
+    }
+}
+
+#main {
+    transition: margin-left .5s; 
+    padding: 20px;
+
+    }
