--- a/style.scss
+++ b/style.scss
@@ -3,3 +3,4 @@
 @import "./Style/Helpers/mixins";
 @import"./Style/Helpers/var";
 @import "./Style/Layout/tables";
+@import "./JaveScript/Layout/_global.js";
