--- a/Style/Layout/_global.scss
+++ b/Style/Layout/_global.scss
@@ -153,6 +153,7 @@ header{
         .fa-user{
             color: white;
             padding-right: 10px;
+            margin-left: 10px;
         }
     }
 }
