--- a/Style/Layout/_tables.scss
+++ b/Style/Layout/_tables.scss
@@ -1,1 +1,141 @@
 
+
+
+
+
+
+
+
+.table-container {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    width: 100%;
+    padding: 2.5%;
+    table {
+        border-collapse: collapse;
+        width: 100%;
+        tr {
+            border-bottom: 1px solid #808080;
+            th {
+                text-align: center;
+            }
+            td {
+                text-align: center;
+            }
+
+            .showmore{
+                td{
+                    .more-info {
+                        padding: 10px 10px;
+                    }
+                }
+
+                .rotate {
+                    -moz-transition: all 0.01s linear;
+                    -webkit-transition: all 0.01s linear;
+                    transition: all 0.01s linear;
+                }
+                
+                .rotate.down {
+                    -moz-transform: rotate(180deg);
+                    -webkit-transform: rotate(180deg);
+                    transform: rotate(180deg);
+                }
+                
+                .fa-sort-down {
+                    padding: 10px 10px;
+                    font-size: 18px;
+                    text-align: center;
+                    justify-self: center;
+                }
+            }
+        }
+        .rowdetail {
+            display: none;
+            background-color: #A7D8C0;
+            border-color: white;
+        
+            tr {
+                border-bottom: 1px solid white;
+
+                td{
+                    
+                    .thead-green {
+                        background-color: #00904A;
+                        color: white;
+                    }
+
+                    .button-green-container {
+                        display: inline-grid;
+                        align-items: center;
+                        justify-items: center;
+                    }
+                }
+            }
+        }
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.button-green {
+    border: none;
+    border-radius: 5px;
+    padding: 3px 2px;
+    font-size: 12px;
+    color: white;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    background-color: #00904A;
+    width: 90%;
+    margin: 10px;
+    cursor: pointer;
+    &:hover {
+        opacity: 0.7;
+    }
+}
+
+
+
+.filter:hover .dropdown-content {
+    display: block;
+}
+
+
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    a {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+        &:hover {
+            background-color: #ddd;
+        }
+    }
+}
+
+
+
+
+
+
