--- a/style.css
+++ b/style.css
@@ -150,4 +150,121 @@ header li .fa-user {
   transition: margin-left .5s;
   padding: 20px;
 }
+
+.mainContent {
+  left: 250px;
+}
+
+.table-container {
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  width: 100%;
+  padding: 2.5%;
+}
+
+.table-container table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+.table-container table tr {
+  border-bottom: 1px solid #808080;
+}
+
+.table-container table tr th {
+  text-align: center;
+}
+
+.table-container table tr td {
+  text-align: center;
+}
+
+.table-container table tr .showmore td .more-info {
+  padding: 10px 10px;
+}
+
+.table-container table tr .showmore .rotate {
+  -webkit-transition: all 0.01s linear;
+  transition: all 0.01s linear;
+}
+
+.table-container table tr .showmore .rotate.down {
+  -webkit-transform: rotate(180deg);
+  transform: rotate(180deg);
+}
+
+.table-container table tr .showmore .fa-sort-down {
+  padding: 10px 10px;
+  font-size: 18px;
+  text-align: center;
+  -ms-grid-column-align: center;
+      justify-self: center;
+}
+
+.table-container table .rowdetail {
+  display: none;
+  background-color: #A7D8C0;
+  border-color: white;
+}
+
+.table-container table .rowdetail tr {
+  border-bottom: 1px solid white;
+}
+
+.table-container table .rowdetail tr td .thead-green {
+  background-color: #00904A;
+  color: white;
+}
+
+.table-container table .rowdetail tr td .button-green-container {
+  display: -ms-inline-grid;
+  display: inline-grid;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  justify-items: center;
+}
+
+.button-green {
+  border: none;
+  border-radius: 5px;
+  padding: 3px 2px;
+  font-size: 12px;
+  color: white;
+  -webkit-box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+          box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  background-color: #00904A;
+  width: 90%;
+  margin: 10px;
+  cursor: pointer;
+}
+
+.button-green:hover {
+  opacity: 0.7;
+}
+
+.filter:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  -webkit-box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
 /*# sourceMappingURL=style.css.map */
