--- a/style.css
+++ b/style.css
@@ -267,4 +267,21 @@ header li .fa-user {
 .dropdown-content a:hover {
   background-color: #ddd;
 }
+
+.btnTrips {
+  width: 100%;
+  text-align: end;
+  padding-right: 50px;
+}
+
+.btnTrips a.button {
+  -webkit-appearance: button;
+  -moz-appearance: button;
+  appearance: button;
+  text-decoration: none;
+  color: white;
+  background-color: #158a49;
+  padding: 8px 20px 8px 20px;
+  border-radius: 5px;
+}
 /*# sourceMappingURL=style.css.map */
