--- a/style.scss
+++ b/style.scss
@@ -3,4 +3,4 @@
 @import "./Style/Helpers/mixins";
 @import"./Style/Helpers/var";
 @import "./Style/Layout/tables";
-@import "./JaveScript/Layout/_global.js";
+@import "./Style/Layout/buttons";
