--- a/Style/Layout/_buttons.scss
+++ b/Style/Layout/_buttons.scss
@@ -15,3 +15,14 @@
 
     }
 }  
+
+/*button from loginpage*/
+
+.loginBtn {
+    font-size: 0.9rem;
+    letter-spacing: 0.05rem;
+    background-color: #158a49 !important;
+    padding: 8px 20px 8px 20px;
+    border-radius: 5px;
+    color: white !important;
+  }
