--- a/Style/Layout/_global.scss
+++ b/Style/Layout/_global.scss
@@ -13,7 +13,9 @@ main{
   
 }
 .sidebar {
-    margin-top: -50px;
+    position: absolute;
+    top:0;
+    bottom:0;
     
         .logo{
             width: 80%;
@@ -21,7 +23,10 @@ main{
            
             
         }
-
+        button{
+          background:none;
+          border:none;
+        }
         .sidebar, .closebtn {
             position: absolute;
             top: 0;
@@ -35,7 +40,6 @@ main{
          
     
   width: 240px;
-  height: 105%;
   background: white;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   position: absolute;
@@ -167,4 +171,5 @@ header{
 
 
     }
+
 
