--- a/style.css
+++ b/style.css
@@ -161,6 +161,14 @@ header li .fa-user {
   padding: 20px;
 }
 
+.mainContent {
+  left: 240px;
+}
+
+#mainContent {
+  margin-left: 260px;
+}
+
 .table-container {
   -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
           box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
