--- a/Style/Layout/_buttons.scss
+++ b/Style/Layout/_buttons.scss
@@ -19,10 +19,20 @@
 /*button from loginpage*/
 
 .loginBtn {
-    font-size: 0.9rem;
+    font-size: 1.2rem;
     letter-spacing: 0.05rem;
     background-color: #158a49 !important;
     padding: 8px 20px 8px 20px;
     border-radius: 5px;
     color: white !important;
+  }
+
+  .submitBtn{
+    font-size: 1.2rem;
+    letter-spacing: 0.05rem;
+    background-color: #158a49 !important;
+    padding: 8px 20px 8px 20px;
+    border-radius: 5px;
+    color: white !important;
+    border: none;
   }
