--- a/Style/Layout/_global.scss
+++ b/Style/Layout/_global.scss
@@ -18,8 +18,9 @@ main{
     bottom:0;
     
         .logo{
-            width: 80%;
-            margin: 20px;
+            width: 50%;
+            margin: 50px 0 20px 50px;
+
            
             
         }
