--- a/style.css
+++ b/style.css
@@ -351,6 +351,48 @@ header li .fa-user {
   border: none;
 }
 
+.centeringPagiDiv {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+}
+
+.centeringPagiDiv .pagiContainer {
+  margin: auto;
+}
+
+.centeringPagiDiv .pagiContainer .pagination li button {
+  font-size: .8rem;
+  letter-spacing: 0.05rem;
+  padding: 8px 20px 8px 20px;
+  color: #158a49;
+}
+
+.centeringPagiDiv .pagiContainer .pagination li buttonhover {
+  background-color: none !important;
+}
+
+.centeringPagiDiv .pagiContainer .pagination li button:hover {
+  background-color: white;
+  border: white;
+  font-size: 1rem;
+  color: #158a49;
+  -webkit-transition: font-size .5s;
+  transition: font-size .5s;
+}
+
+.centeringPagiDiv .pagiContainer .pagination li .middelBtn {
+  font-size: .8rem;
+  letter-spacing: 0.05rem;
+  background-color: #158a49;
+  padding: 8px 20px 8px 20px;
+  border-radius: 5px;
+  color: white;
+  border: none;
+  opacity: 1;
+}
+
 /*loginform*/
 .login {
   min-height: 100vh;
