--- a/Style/Layout/_buttons.scss
+++ b/Style/Layout/_buttons.scss
@@ -36,3 +36,46 @@
     color: white !important;
     border: none;
   }
+
+  .centeringPagiDiv{
+    display: flex;
+    width: 100%;
+    .pagiContainer{
+      margin: auto;
+      .pagination{
+        li{
+  
+          button{
+            font-size: .8rem;
+            letter-spacing: 0.05rem;
+            padding: 8px 20px 8px 20px;
+            color: #158a49;
+            &hover{
+              background-color: none!important;
+            }
+            &:hover{
+              background-color: white;
+              border: white;
+              font-size: 1rem;
+              color:#158a49; 
+              transition: font-size .5s; 
+              
+            }
+            
+          }
+          .middelBtn{
+            font-size: .8rem;
+            letter-spacing: 0.05rem;
+            background-color: #158a49;
+            padding: 8px 20px 8px 20px;
+            border-radius: 5px;
+            color: white;
+            border: none;
+            opacity: 1;
+          }
+          
+        }
+        
+      }
+    }
+  }
