--- a/Style/Layout/_buttons.scss
+++ b/Style/Layout/_buttons.scss
@@ -1,21 +1,5 @@
     
-.btnTrips{  
 
-
-
-        a.button {
-        -webkit-appearance: button;
-        -moz-appearance: button;
-        appearance: button;
-        text-decoration: none;
-        color: white;
-        background-color: #158a49;
-        padding: 8px 20px 8px 20px;
-        border-radius: 5px;
-
-    }
-    
-}  
 
 
 /*button from loginpage*/
@@ -114,3 +98,39 @@
     text-align: left!important;
     margin-left: 15px;
   }
+
+
+
+    .w3-dropdown-click{  
+      display: flex!important;
+      width: 100%;
+      float: left;
+      margin-top: 32px;
+      &:hover{
+        background-color: white!important;
+      }
+      .w3-button{
+        -webkit-appearance: button;
+        -moz-appearance: button;
+        appearance: button;
+        text-decoration: none;
+        color: black;
+        background-color: white;
+        padding: 8px 20px 8px 20px;
+        border-radius: 5px;
+        text-align: left;
+        box-shadow: none;
+        border: solid 1px rgba(0, 0, 0, 0.233);
+        margin-bottom: 20px;
+        margin-left: 30px;
+        width: 300px;
+        &:hover{
+          background-color: white!important;
+        }
+    } 
+    h4{
+      font-size: 1.2rem;
+      margin-left: 30px;
+    } 
+  }
+  
