--- a/style.css
+++ b/style.css
@@ -315,17 +315,6 @@ header li .fa-user {
   font-size: 14px;
 }
 
-.btnTrips a.button {
-  -webkit-appearance: button;
-  -moz-appearance: button;
-  appearance: button;
-  text-decoration: none;
-  color: white;
-  background-color: #158a49;
-  padding: 8px 20px 8px 20px;
-  border-radius: 5px;
-}
-
 /*button from loginpage*/
 .loginBtn {
   font-size: 1.2rem;
@@ -415,6 +404,46 @@ header li .fa-user {
 .w3-button {
   text-align: left !important;
   margin-left: 15px;
+}
+
+.w3-dropdown-click {
+  display: -webkit-box !important;
+  display: -ms-flexbox !important;
+  display: flex !important;
+  width: 100%;
+  float: left;
+  margin-top: 32px;
+}
+
+.w3-dropdown-click:hover {
+  background-color: white !important;
+}
+
+.w3-dropdown-click .w3-button {
+  -webkit-appearance: button;
+  -moz-appearance: button;
+  appearance: button;
+  text-decoration: none;
+  color: black;
+  background-color: white;
+  padding: 8px 20px 8px 20px;
+  border-radius: 5px;
+  text-align: left;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  border: solid 1px rgba(0, 0, 0, 0.233);
+  margin-bottom: 20px;
+  margin-left: 30px;
+  width: 300px;
+}
+
+.w3-dropdown-click .w3-button:hover {
+  background-color: white !important;
+}
+
+.w3-dropdown-click h4 {
+  font-size: 1.2rem;
+  margin-left: 30px;
 }
 
 /*loginform*/
