--- a/style.css
+++ b/style.css
@@ -416,7 +416,8 @@ header li .fa-user {
 }
 
 .w3-dropdown-click:hover {
-  background-color: white !important;
+  background-color: rgba(255, 255, 255, 0) !important;
+  color: #1abc9c !important;
 }
 
 .w3-dropdown-click .w3-button {
@@ -425,16 +426,16 @@ header li .fa-user {
   appearance: button;
   text-decoration: none;
   color: black;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0);
   padding: 8px 20px 8px 20px;
   border-radius: 5px;
   text-align: left;
   -webkit-box-shadow: none;
           box-shadow: none;
   border: solid 1px rgba(0, 0, 0, 0.233);
-  margin-bottom: 20px;
-  margin-left: 30px;
   width: 300px;
+  margin-bottom: 20px;
+  padding: none !important;
 }
 
 .w3-dropdown-click .w3-button:hover {
@@ -443,7 +444,13 @@ header li .fa-user {
 
 .w3-dropdown-click h4 {
   font-size: 1.2rem;
-  margin-left: 30px;
+}
+
+.w3-dropdown-click .w3-dropdown-content {
+  margin-left: 15px !important;
+  margin-top: -21px !important;
+  border: solid 1px rgba(0, 0, 0, 0.233) !important;
+  width: 300px;
 }
 
 /*loginform*/
