--- a/Style/Layout/_buttons.scss
+++ b/Style/Layout/_buttons.scss
@@ -110,6 +110,17 @@
         background-color: rgba(255, 255, 255, 0)!important;
         color: #1abc9c!important;
       }
+
+      .HeadlineDropdown{
+        display: flex!important;
+        width: 100%;
+        float: left;
+        margin-top: 32px;
+        &:hover{
+        color: #1abc9c00!important;
+        }
+      }
+
       .w3-button{
         -webkit-appearance: button;
         -moz-appearance: button;
@@ -139,6 +150,7 @@
       margin-top: -21px!important;
       border: solid 1px rgba(0, 0, 0, 0.233)!important;
       width: 300px;
+      
    
       
  
