--- a/Style/Layout/_tables.scss
+++ b/Style/Layout/_tables.scss
@@ -55,7 +55,7 @@
         }
         .rowdetail {
             display: none;
-            background-color: #A7D8C0;
+            background-color: rgba(211, 211, 211, 0.24);
             border-color: white;
             
         
@@ -87,7 +87,6 @@
                         flex-direction: column;
                         vertical-align: middle;
                         margin: 5px 20px ;
-
                     }
                     .infoText{
                         width: 60%;
@@ -96,7 +95,6 @@
                     .TreBtn{
                         margin: auto;
                         color: white;
-                        background-color: lightgrey;
                         .btnGreen{
                             background-color:$LigthGreen;
                             color: white;
